--- a/index.html
+++ b/index.html
@@ -3,11 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <title>Document</title>
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
-    <h1>Fight game</h1>
-    <button id="new-round-btn">NEW ROUND!!!</button>
+    <div class="container">
+        <h1 class="text-center mt-5 mb-3">Fight game</h1>
+
+        <!-- PLAYERS CONTAINER -->
+        <section class="players-container d-flex">
+            <!-- PLAYER 1 -->
+            <div id="player1" class="player d-flex">
+                <div class="avatar-container">
+                    <div class="avatar me-1"></div>
+                    <div class="name">Player 1</div>
+                </div>
+                <div class="bars-container">
+                    <div class="bar health-bar px-1 my-1">health</div>
+                    <div class="bar energy-bar px-1">energy</div>
+                </div>
+            </div>
+            <!-- END: PLAYER 1 -->
+
+            <div class="round text-center mx-2">Round <span>33</span></div>
+
+            <!-- PLAYER 2 -->
+            <div id="player2" class="player d-flex">
+                <div class="avatar-container">
+                    <div class="avatar ms-1"></div>
+                    <div class="name text-end">Player 2</div>
+                </div>
+                <div class="bars-container">
+                    <div class="bar health-bar text-end px-1 my-1">health</div>
+                    <div class="bar energy-bar float-end text-end px-1">energy</div>
+                </div>
+            </div>
+            <!-- END: PLAYER 2 -->
+        </section>
+        <!-- END: PLAYERS CONTAINER -->
+
+        <section class="menu text-center">
+            <button id="new-round-btn" class="btn btn-outline-primary ">NEW ROUND!!!</button>
+        </section>
+
+        <section class="logs-section">
+            <h2>Log:</h2>
+            <div id="log-container" class="log bg-light"></div>
+        </section>
+    </div>
+
 </body>
 </html>
+
