Fixed player 2 health and energy bars

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body class="roboto">
     <div class="container">
         <h1 class="text-center mt-5 mb-3">Fight game</h1>
-
+        <div class="parent">
+            <div class="child">Right Aligned</div>
+        </div>
         <!-- PLAYERS CONTAINER -->
         <section class="players-container bebas-neue d-flex">
             <!-- PLAYER 1 -->
@@ -29,8 +31,8 @@
                     <div class="name fs-5">Player 1</div>
                 </div>
                 <div class="bars-container">
-                    <div class="bar health-bar px-1 my-1"></div>
-                    <div class="bar energy-bar px-1"></div>
+                    <div class="bar health-bar my-1"></div>
+                    <div class="bar energy-bar"></div>
                 </div>
             </div>
             <!-- END: PLAYER 1 -->
@@ -44,8 +46,8 @@
                     <div class="name fs-5 text-end">Player 2</div>
                 </div>
                 <div class="bars-container">
-                    <div class="bar health-bar text-end px-1 my-1"></div>
-                    <div class="bar energy-bar float-end text-end px-1"></div>
+                    <div class="bar health-bar text-end my-1"></div>
+                    <div class="bar energy-bar float-end text-end"></div>
                 </div>
             </div>
             <!-- END: PLAYER 2 -->
